@@ -264,18 +264,21 @@ to print the corresponding values, or T for all of them.")
                         #'string<))))
       (when (keywordp obj)
         (format stream (ENGLISH ", is a keyword")))
-      (when (boundp obj)
-        (if (constantp obj)
-          (format stream (ENGLISH ", a constant"))
-          (if (sys::special-variable-p obj)
-            (format stream (ENGLISH ", a variable declared SPECIAL"))
-            (format stream (ENGLISH ", a variable"))))
-        (when (symbol-macro-expand obj)
-          (format stream (ENGLISH " (macro: ~s)")
-                  (macroexpand-1 obj))
-          (push `(macroexpand-1 ',obj) moree))
-        (format stream (ENGLISH ", value: ~s") (sys::%symbol-value obj))
-        (pushnew (sys::%symbol-value obj) mored))
+      (cond ((boundp obj)
+             (if (constantp obj)
+               (format stream (ENGLISH ", a constant"))
+               (if (sys::special-variable-p obj)
+                 (format stream (ENGLISH ", a variable declared SPECIAL"))
+                 (format stream (ENGLISH ", a variable"))))
+             (when (symbol-macro-expand obj)
+               (format stream (ENGLISH " (macro: ~s)")
+                       (macroexpand-1 obj))
+               (push `(macroexpand-1 ',obj) moree))
+             (format stream (ENGLISH ", value: ~s") (sys::%symbol-value obj))
+             (pushnew (sys::%symbol-value obj) mored))
+            ((sys::special-variable-p obj)
+             (format stream
+                     (ENGLISH ", an unbound variable declared SPECIAL"))))
       (when (fboundp obj)
         (format stream (ENGLISH ", names "))
         (cond ((special-operator-p obj)
@@ -480,22 +483,23 @@ to print the corresponding values, or T for all of them.")
   (finish-output stream))
 
 (defun describe (obj &optional stream)
-  (if (typep stream 'describe-stream)
-    ;; Recursive call
-    (let ((*describe-nesting* (1+ *describe-nesting*))
-          (*print-right-margin*
-             (max (- (or *print-right-margin* sys::*prin-linelength*)
-                     *print-indent-lists*)
-                  1)))
-      (describe1 obj stream))
-    ;; Top-level call
-    (progn
-      (cond ((eq stream 'nil) (setq stream *standard-output*))
-            ((eq stream 't) (setq stream *terminal-io*)))
-      (let ((*print-circle* t)
-            (*describe-nesting* 0)
-            (*describe-done* nil))
-        (describe1 obj (clos:make-instance 'describe-stream :stream stream)))))
+  (cond ((typep stream 'describe-stream) ; Recursive call
+         ;; flush the pending output _before_ increasing indentation
+         (force-output stream)
+         (let ((*describe-nesting* (1+ *describe-nesting*))
+               (*print-right-margin*
+                (max (- (or *print-right-margin* sys::*prin-linelength*)
+                        *print-indent-lists*)
+                     1)))
+           (describe1 obj stream)))
+        (t                      ; Top-level call
+         (cond ((eq stream 'nil) (setq stream *standard-output*))
+               ((eq stream 't) (setq stream *terminal-io*)))
+         (let ((*print-circle* t)
+               (*describe-nesting* 0)
+               (*describe-done* nil))
+           (describe1 obj (clos:make-instance 'describe-stream
+                                              :stream stream)))))
   (values))
 
 ;;-----------------------------------------------------------------------------
